Create youtube search API

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 envlist=pytest
 
 [testenv:pytest]
-install_command=
-    pip install --pre --process-dependency-links -b .tox/build-pytest {opts} {packages}
 deps=
+    git+git://github.com/mverteuil/pytest-ipdb.git
     pytest-django
+    mock
 changedir=
     {envdir}
 commands=
