- Remove pytest-ipdb dependency.

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,16 @@
 [tox]
 envlist=pytest
 
+[testenv]
+setenv=
+    PIP_PROCESS_DEPENDENCY_LINKS=true
+    PIP_PRE=true
+    PIP_ALLOW_ALL_EXTERNAL=true
+
 [testenv:pytest]
+install_command=
+    pip install -b .tox/pytest/build --log .tox/pytest/log/full-pip.log {opts} {packages}
 deps=
-    git+git://github.com/mverteuil/pytest-ipdb.git
     pytest-django
     mock
 changedir=
