Pin pytest 3.4.0 pytest-django 3.1.2

--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,9 @@ setenv=
 [testenv:pytest]
 install_command=
     pip install -b .tox/pytest/build --log .tox/pytest/log/full-pip.log {opts} {packages}
-deps=
-    pytest-django
-    mock
+deps = pytest == 3.4.0
+    pytest-django == 3.1.2
+    mock == 2.0.0
 changedir=
     {envdir}
 commands=
