Pin attrs package

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ setenv=
 install_command=
     pip install -b .tox/pytest/build --log .tox/pytest/log/full-pip.log {opts} {packages}
 deps = pytest == 3.4.0
+    attrs == 19.1.0
     pytest-django == 3.1.2
     mock == 2.0.0
 changedir=
